--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.1.3
+Flask==2.2.2
 WTForms==2.3.3
 Flask_WTF==0.14.3
-Flask_SQLAlchemy>=3.0.2 
+Flask_SQLAlchemy==3.0.2 
 Werkzeug~=2.0.0
 jinja2~=3.0.3
 gunicorn
